...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initial_note"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/initial_name_editor"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="parent"/>

        <EditText
            android:id="@+id/initial_name_editor"
            android:hint="@string/initial_hint"
...
            android:textAlignment="center"
            android:text="@={viewModel.nameText}"
            app:layout_constraintTop_toBottomOf="@id/initial_note_message"
            app:layout_constraintStart_toEndOf="parent" />

        <Button
            android:id="@+id/initial_name_decision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_ok"
            android:onClick="@{() -> viewModel.setUserName()}"
            android:enabled="@{viewModel.nameText.empty ? false : true}"
            app:layout_constraintTop_toBottomOf="@id/initial_name_editor"
...
