<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.CommunicableUserListFragment">

    <data>
        <variable
            name="activeUser"
            type="com.komeyama.offline.chat.domain.ActiveUser" />

        <variable
            name="viewModel"
            type="com.komeyama.offline.chat.ui.MainViewModel"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/active_user_item" />

    </FrameLayout>
</layout>
