<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/CommunicableUserListFragment"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/bottom_chat_title"/>
    <item
        android:id="@+id/CommunicationHistoryListFragment"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/bottom_history_title"/>
    <item
        android:id="@+id/SettingFragment"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/bottom_setting_title"/>

</menu>