...
                android:layout_width="match_parent"
                android:name="androidx.navigation.fragment.NavHostFragment"
                app:navGraph="@navigation/navigation_main"
                app:defaultNavHost="true" />

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="?android:attr/windowBackground"
                app:menu="@menu/bottom_navigation"
                app:menuEnable="@{viewModel.requestResult == RequestResult.LOADING ? true : false}"/>
...
